# R-Slash

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile-discord-interface  Dockerfile-discord-roles  Dockerfile-discord-shard  Dockerfile-reddit-downloader  License.md  README.md  build.py  r-slash.code-workspace  slash_commands.json
.github/: FUNDING.yml
.github/workflows/: update-messages.yml
Kubernetes/: api-cluster-role.yml  discord-config.yml  discord-creds.yml  discord-interface-deployment.yaml  discord-shards-deployment.yml  discord.yml  downloader.yml  mongodb.yml  murraygroves-registry-secret.yml  pre-setup.yml  r-slash-namespace.yml  redis-deployment.yml  redis-service.yml  redis.yml  role-binding.yml
auto-poster/: Cargo.toml  Dockerfile  auto-poster.yml  build.sh
auto-poster/src/: auto_poster.rs  main.rs  timer_loop.rs
badge-server/: Cargo.toml  Dockerfile
badge-server/src/: main.rs
connection-pooler/: Cargo.toml
connection-pooler/src/: lib.rs
discord-interface/: Cargo.toml  Dockerfile  build.sh
discord-interface/src/: main.rs
discord-roles/: Cargo.toml  Dockerfile
discord-roles/src/: main.rs
k8s-interface/: Cargo.toml
k8s-interface/src/: lib.rs
memberships/: Cargo.toml
memberships/src/: lib.rs
mp4-opengraph/: Cargo.toml  Dockerfile  base.html  release.sh
mp4-opengraph/src/: main.rs
nomad/: consul.nomad.hcl  downloader.nomad.hcl  mongodb.nomad.hcl  redis.nomad.hcl  role-detector.nomad.hcl
nomad/nomad-pack/templates/: shards_and_interface.nomad.hcl
post-api/: Cargo.toml
post-api/src/: lib.rs
post-subscriber/: Cargo.toml  Dockerfile  build.sh  post-subscriber.yml
post-subscriber/src/: main.rs  post_subscriber.rs
posthog/: Cargo.toml
posthog/src/: lib.rs
reddit-downloader/: Cargo.toml  Dockerfile  release.sh
reddit-downloader/src/: helpers.rs  main.rs  redgifs.rs
reddit-downloader/src/downloaders/: client.rs  dash.rs  generic.rs  imgur.rs  mod.rs  redgifs.rs
reddit-proxy/: Cargo.toml  Dockerfile  build.sh  reddit-proxy.yml
reddit-proxy/src/: main.rs  reddit_proxy.rs
rslash-manager/: Cargo.toml
rslash-manager/src/: main.rs
rslash_common/: Cargo.toml
rslash_common/src/: access_tokens.rs  guards.rs  lib.rs  rpc.rs
rslash_types/: Cargo.toml
rslash_types/src/: lib.rs
scripts/: change_cdn.py  delete_dangling_posts.py  delete_old_gifs.py  delete_posts_missing_media.py  lowercase_all_posts.py  notify_power_users.py  separate_post_lists.py
shard/: .dockerignore  Cargo.toml  Dockerfile  debug.sh  release.sh
shard/src/: command_handlers.rs  component_handlers.rs  discord.rs  feature_flags.rs  main.rs  modal_handlers.rs  poster.rs  reddit.rs  types.rs
shard/src/feature_handlers/config/: channel_config.rs  command.rs  mod.rs
src/coordinator/: main.rs  request_handlers.rs
src/discord-interface/: main.rs
src/downloader/: main.rs
src/role-detector/: main.rs
src/rslash-manager/: main.rs
src/shard/: main.rs
src/update-commands/: main.rs
stats-uploader/: Cargo.toml  Dockerfile  stats-uploader.yml
stats-uploader/src/: main.rs
user-config-manager/: Cargo.toml
user-config-manager/src/: lib.rs
user-downloader/: README.md  gleam.toml  manifest.toml
user-downloader/.github/workflows/: test.yml
user-downloader/.zed/: settings.json
user-downloader/src/: user_downloader.gleam
user-downloader/src/processing/: embedding.gleam  processing.gleam
user-downloader/src/types/: post_key.gleam  types.gleam
website/: bun.lockb  eslint.config.js  package.json  tailwind.config.ts
website-api/: Cargo.toml
website-api/src/: auth.rs  main.rs  utility.rs
website-api/src/request_handlers/: mod.rs
website-api/src/request_handlers/channels/: mod.rs  subscriptions.rs
website-api/src/request_handlers/user/: guilds.rs
website-bb/: package-lock.json  package.json
website-bb/src/: app.css  app.html
website-bb/src/routes/: +layout.svelte  +page.svelte
website-bb/static/: smui.css
website/src/: app.css  app.html
website/src/lib/: shared.ts  types.ts
website/src/lib/settings/: ChannelSettings.svelte  SubscriptionsSettings.svelte
website/src/routes/[bot]/: +page.svelte  +page.ts
website/src/routes/[bot]/settings/: +page.svelte
