[package]
name = "r-slash"
version = "0.1.0"
edition = "2018"
default-run = "discord-interface"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tungstenite = "0.17.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3"}
log = "0.4"
env_logger = "*"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "*", features = ["macros", "sync", "rt-multi-thread", "time"]}
reqwest = { version = "*", features = ["json", "rustls-tls"]}
serenity = { version = "0.11.5", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api", "builder", "http"], git = "https://github.com/serenity-rs/serenity", branch = "current" }
crossbeam = "*"
crossbeam-utils = "*"
redis = "*"
rand = { version = "*", features = ["alloc"]}
kube = { version = "0.73.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
quit = "*"
base64 = "*"
chrono = { version = "*", features = ["alloc"] }
mongodb = "2.3"

[[bin]]
name = "discord-interface"
path = "src/discord-interface/main.rs"

[[bin]]
name = "discord-shard"
path = "src/shard/main.rs"

[[bin]]
name = "downloader"
path = "src/downloader/main.rs"

[[bin]]
name = "update-commands"
path = "src/update-commands/main.rs"

[[bin]]
name = "rslash-manager"
path = "src/rslash-manager/main.rs"


[profile.release]
debug = true
