[workspace]

members = [
    "discord-interface",
    "shard",
    "reddit-downloader",
    "rslash-manager",
    "memberships",
    "discord-roles",
    "k8s-interface",
    "posthog",
    "rslash_types",
    "badge-server",
    "connection-pooler",
]

[profile.release]
debug = 2
split-debuginfo = "packed"