[package]
name = "auto_poster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next" }
redis = { git = "https://github.com/redis-rs/redis-rs.git", features = ["aio", "tokio-comp"] }
tokio = { version = "1.36", features = ["rt-multi-thread"] }
env_logger = "0.11"
log = "*"
mongodb = "*"
tarpc = { version = "*", features = [
    "serde-transport",
    "tcp",
    "serde-transport-bincode",
    "tokio1",
    "tokio-serde",
] }
anyhow = "*"
futures = "*"
serde_derive = "*"
serde = "*"
serde_json = "*"
serde_with = "*"
chrono = "*"
timer = "*"
async-recursion = "*"
integer-hasher = "*"
sentry = { version = "0.34", features = [
    "tracing",
    "anyhow",
    "debug-images",
    "tokio",
] }

tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.26", features = ["tonic", "grpc-tonic"] }
tonic = "*"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.26"

post_api = { path = "../post-api" }
rslash_common = { path = "../rslash_common" }

#[patch.crates-io]
#serenity = { path = "../../serenity" }

[lib]
name = "auto_poster"
path = "src/auto_poster.rs"
