[package]
name = "connection_pooler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "*"
anyhow = "*"
serenity = {version = "0.12", features = ["client"]}
tokio = {version = "*", features = ["sync"]}