[package]
name = "discord-interface"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["macros", "sync", "rt-multi-thread", "time", "full"]}
serenity = { version = "0.11.5", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api", "builder", "http"], git = "https://github.com/serenity-rs/serenity", branch = "current" }
env_logger = "*"
serde_json = "1.0"
kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", features = ["v1_24"] }
redis = { version = "*", features = ["aio", "tokio-comp", "connection-manager"] }
reqwest = { version = "*", features = ["json", "rustls-tls", "cookies"]}
log = "0.4"
tungstenite = "0.17.2"
