[package]
name = "discord-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "*", features = ["aio", "tokio-comp", "connection-manager"] }
tokio = { version = "*", features = ["rt-multi-thread", "full"] }
env_logger = "0.11"
log = "*"
anyhow = "*"
futures = "*"
serde_derive = "*"
serde = "*"
serde_json = "*"
serde_with = "*"
chrono = "*"
timer = "*"
kube = "*"
k8s-openapi = { version = "*", features = ["v1_31"] }
reqwest = { version = "0.12.9", features = ["json"] }


[[bin]]
name = "discord-interface"
path = "src/main.rs"
