[package]
name = "memberships"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3"
tokio = { version = "*", features = ["macros", "sync", "rt-multi-thread", "time", "full"]}
serenity = { version = "0.12", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api", "builder", "http"], git = "https://github.com/serenity-rs/serenity", branch = "current" }
rslash_types = {path = "../rslash_types"}
log = "0.4"
sentry = "0.29.3"
serde_derive = "*"
serde = "*"
