[package]
name = "post_api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3" }
log = "0.4"
env_logger = "*"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "*", features = ["macros", "sync", "rt-multi-thread", "time", "full"] }
reqwest = { version = "*", features = ["json", "rustls-tls", "cookies"] }
serenity = { git = "https://github.com/jamesbt365/serenity.git", branch = "components-v2", default-features = false, features = ["cache", "gateway", "rustls_backend", "model", "builder", "http"] }
redis = { git = "https://github.com/redis-rs/redis-rs", features = ["aio", "tokio-comp", "connection-manager"] }
rand = { version = "*", features = ["alloc"] }
mongodb = "2.3"
serde_derive = "1.0"
pretty_env_logger = "*"
anyhow = { version = "*", features = ["backtrace"] }
sentry = { version = "0.29.3", features = ["tracing", "anyhow", "debug-images"] }
tracing = "*"
tracing-subscriber = { version = "*" }
compile-time = "*"
chrono = "*"
async-recursion = "*"
url = "*"

rslash_common = { path = "../rslash_common" }
