[package]
name = "post_subscriber"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
redis = { version = "*", features = ["aio", "tokio-comp"] }
tokio = { version = "1.36", features = ["rt-multi-thread"] }
env_logger = "0.11"
log = "*"
posthog = { path = "../posthog" }
mongodb = "*"
tarpc = { version = "*", features = [
    "serde-transport",
    "tcp",
    "serde-transport-bincode",
] }
anyhow = "*"
futures = "*"
serde_derive = "*"
serde = "*"
chrono = "*"

sentry = { version = "0.34", features = [
    "tracing",
    "anyhow",
    "debug-images",
    "tokio",
] }

post_api = { path = "../post-api" }
rslash_common = { path = "../rslash_common" }

tracing = "*"
tracing-subscriber = { version = "*" }
tracing-opentelemetry = "*"
opentelemetry-otlp = { version = "*", features = ["tonic", "grpc-tonic"] }
opentelemetry = "0.28.0"
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "*"


[lib]
name = "post_subscriber"
path = "src/post_subscriber.rs"
