[package]
name = "post_subscriber"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { git = "https://github.com/jamesbt365/serenity.git", branch = "components-v2", features = ["model"] }
redis = { git = "https://github.com/redis-rs/redis-rs", features = ["aio", "tokio-comp"] }
tokio = { version = "*", features = ["rt-multi-thread"] }
env_logger = "0.11"
log = "*"
mongodb = "*"
tarpc = { version = "*", features = [
    "serde-transport",
    "tcp",
    "serde-transport-bincode",
] }
anyhow = "*"
futures = "*"
serde_derive = "*"
serde = "*"
chrono = "*"

sentry = { version = "*", features = [
    "tracing",
    "anyhow",
    "debug-images",
    "tokio",
] }

post_api = { path = "../post-api" }
rslash_common = { path = "../rslash_common" }

tracing = "*"
tracing-subscriber = { version = "*" }
tracing-opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.26", features = ["tonic", "grpc-tonic"] }
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.26"
serde_json = "1.0.140"


[lib]
name = "post_subscriber"
path = "src/post_subscriber.rs"
