[package]
name = "posthog"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.*"
env_logger = "*"
reqwest = { version = "*", features = ["json", "rustls-tls"] }
serde_json = "1.0"
serde = "*"
anyhow = "*"
tokio = "*"