[package]
name = "reddit-downloader"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["macros", "sync", "rt-multi-thread", "time", "full", "tracing"]}
reqwest = { version = "*", features = ["json", "rustls-tls", "cookies", "stream"]}
redis = { version = "*", features = ["aio", "tokio-comp", "connection-manager"] }
serde_json = "1.0"
mongodb = "2.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
truncrate = "*"
futures = { version = "0.3" }
sentry = { version = "0.29.3", features = ["tracing", "anyhow", "debug-images"] }
tracing = "*"
tracing-subscriber = { version = "*"}
anyhow = { version = "*", features = ["backtrace"] }
chrono = "*"
console-subscriber = "*"
itertools = "*"
posthog = {path = "../posthog"}
dash-mpd = "*"
metascraper = "*"
base64 = "*"
tarpc = {version="*", features = ["serde-transport", "tcp", "serde-transport-bincode"]}
stubborn-io = "*"

post_subscriber = {path = "../post-subscriber"}