[package]
name = "reddit-downloader"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = [
    "macros",
    "sync",
    "rt-multi-thread",
    "time",
    "full",
    "tracing",
] }
reqwest = { version = "*", features = [
    "json",
    "rustls-tls",
    "cookies",
    "stream",
] }
redis = { version = "*", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
serde_json = "1.0"
mongodb = "2.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
truncrate = "*"
futures = { version = "0.3" }
sentry = { version = "0.29.3", features = [
    "tracing",
    "anyhow",
    "backtrace",
    "debug-images",
] }


tracing = "*"
tracing-subscriber = { version = "*" }
log = "*"
anyhow = { version = "*", features = ["backtrace"] }
chrono = "*"
console-subscriber = "*"
itertools = "*"
posthog = { path = "../posthog" }
dash-mpd = "*"
metascraper = "*"
base64 = "*"
tarpc = { version = "*", features = [
    "serde-transport",
    "tcp",
    "serde-transport-bincode",
] }
stubborn-io = "*"
lazy_static = "*"
ordermap = "*"
indexmap = "*"
atomic-counter = "*"

post_subscriber = { path = "../post-subscriber" }
rslash_types = { path = "../rslash_types" }

tracing-opentelemetry = "*"
opentelemetry-otlp = "*"
tonic = "*"
opentelemetry = "0.26.0"
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "*"


[patch.crates-io]
protobuf-src = { git = "https://github.com/emarsden/rust-protobuf-native" }

[profile.release]
debug = "full"
split-debuginfo = "packed"
lto = "thin"
