[package]
name = "reddit-downloader"
version = "1.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = [
    "json",
    "rustls-tls",
    "cookies",
    "stream",
] }
rustls = { version = "0.23", features = ["ring"] }

redis = { version = "0.32", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
mongodb = "3.2.1"

tokio = { version = "*", features = [
    "macros",
    "sync",
    "rt-multi-thread",
    "time",
    "full",
    "tracing",
] }
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
futures = { version = "0.3" }

serde_json = "1.0"
truncrate = "*"
mime2ext = "*"
base64 = "*"
chrono = "*"

sentry = { version = "0.36.0", features = [
    "tracing",
    "anyhow",
    "backtrace",
    "debug-images",
] }
log = "*"
anyhow = { version = "*", features = ["backtrace"] }
tracing = "*"
tracing-subscriber = { version = "*" }
tracing-opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.26", features = ["tonic", "grpc-tonic"] }
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.26"
metrics = "*"
metrics-exporter-prometheus = "*"

itertools = "*"

dash-mpd = "*"
tl = "*"
metascraper = "*"

tarpc = { version = "*", features = [
    "serde-transport",
    "tcp",
    "serde-transport-bincode",
] }
stubborn-io = "*"
lazy_static = "*"

post_subscriber = { path = "../post-subscriber" }
rslash_common = { path = "../rslash_common" }
reddit-proxy = { path = "../reddit-proxy" }
user-config-manager = { path = "../user-config-manager" }

[patch.crates-io]
protobuf-src = { git = "https://github.com/emarsden/rust-protobuf-native" }

[profile.release]
debug = "full"
split-debuginfo = "packed"
lto = "thin"
