[package]
name = "rslash-manager"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model", "unstable_discord_api", "builder", "http"], git = "https://github.com/serenity-rs/serenity", branch = "current" }
redis = { version = "*", features = ["aio", "tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "*", features = ["macros", "sync", "rt-multi-thread", "time", "full"] }
reqwest = { version = "*", features = ["json", "stream", "blocking", "rustls-tls"] }
