[package]
name = "rslash_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
mongodb = "*"
posthog = { path = "../posthog" }
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next" }
redis = { git = "https://github.com/redis-rs/redis-rs", features = ["aio", "tokio-comp"] }
tokio = "*"

tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.27" }
opentelemetry-otlp = { version = "0.26", features = ["tonic", "grpc-tonic"] }
tonic = "*"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.26"