[package]
name = "rslash_common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
mongodb = "*"
posthog = { path = "../posthog" }
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next" }
redis = { version = "0.32", features = ["aio", "tokio-comp"] }

futures = "*"
tokio = "*"

tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.27" }
opentelemetry-otlp = { version = "0.26", features = ["tonic", "grpc-tonic"] }
tonic = "*"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.26"
metrics = "*"
metrics-exporter-prometheus = "*"

reqwest = "0.12.18"
chrono = "0.4.41"
lazy_static = "1.5.0"
serde_json = "1.0.140"

sentry = "*"
serde = { version = "1.0.219", features = ["derive"] }

stubborn-io = "*"

user-config-manager = { path = "../user-config-manager" }
