[package]
name = "discord-shard"
version = "1.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3" }
dashmap = { version = "6.1.0" }
log = "0.4"
env_logger = "*"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
tokio = { version = "*", features = [
    "macros",
    "sync",
    "rt-multi-thread",
    "time",
    "full",
] }

reqwest = { version = "*", features = ["json", "rustls-tls", "cookies"] }
rustls = { version = "0.23", features = ["ring"] }

serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", default-features = false, features = [
    "cache",
    "gateway",
    "rustls_backend",
    "model",
    "builder",
    "http",
] }
redis = { version = "0.32", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
mongodb = "*"

rand = { version = "*", features = ["alloc"] }
serde_derive = "1.0"
pretty_env_logger = "*"
indoc = "2.0.6"

anyhow = { version = "*", features = ["backtrace"] }
sentry = { version = "0.34", features = [
    "tracing",
    "anyhow",
    "debug-images",
    "tokio",
] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.26", features = ["tonic", "grpc-tonic"] }
tonic = "*"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-appender-tracing = "0.26"
metrics = "*"
metrics-exporter-prometheus = "*"

compile-time = "*"
chrono = "*"
async-recursion = "*"
url = "*"
tarpc = { version = "*", features = [
    "serde-transport",
    "tcp",
    "serde-transport-bincode",
] }
stubborn-io = "*"
sentry-anyhow = "*"
sentry-backtrace = "*"
pretty-duration = "*"
lazy_static = "*"

posthog = { path = "../posthog" }
memberships = { path = "../memberships" }
rslash_common = { path = "../rslash_common" }
post_api = { path = "../post-api" }
post_subscriber = { path = "../post-subscriber" }
auto_poster = { path = "../auto-poster" }
user-config-manager = { path = "../user-config-manager" }
reddit-proxy = { path = "../reddit-proxy" }

[[bin]]
name = "discord-shard"
path = "src/main.rs"

