[package]
name = "stats-uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json", "rustls-tls", "cookies", "stream"]}
redis = { version = "*", features = ["aio", "tokio-comp", "connection-manager"] }
serde_json = "1.0"
tokio = { version = "*", features = ["full"] }